# substation

./: .claudeignore  .gitignore  INSTALL.md  README.md  config.yaml.default  config.yaml.example  installation.txt  main.py  pyproject.toml  requirements.txt
examples/: scan_demo.py
scripts/: antenna.py
sdr_scanner/: __init__.py  __main__.py  cli.py  config.py  constants.py  recording.py  scanner.py  types.py
sdr_scanner/devices/: __init__.py  base.py  hackrf.py  rtlsdr.py
sdr_scanner/dsp/: __init__.py  demodulation.py  filters.py  noise_reduction.py
sdr_scanner/recording/: __init__.py  recorder.py
sdr_scanner/scanner/: __init__.py  scanner.py
substation/: __init__.py  __main__.py  cli.py  config.py  constants.py  recording.py  scanner.py
substation/devices/: __init__.py  base.py  file.py  hackrf.py  rtlsdr.py  soapysdr.py
substation/dsp/: demodulation.py  filters.py  noise_reduction.py
tests/: conftest.py  iq_generators.py  test_cli.py  test_config.py  test_constants.py  test_demodulation.py  test_devices.py  test_events.py  test_filters.py  test_noise_reduction.py  test_recording.py  test_scanner_channels.py  test_scanner_detection.py  test_scanner_transitions.py  test_soapysdr.py
