[build-system]
# setuptools 81 removed pkg_resources, which several of our runtime
# dependencies still import.  Pin below 81 until they catch up.
requires = ["setuptools>=61.0,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "substation"
dynamic = ["version"]
description = "A versatile SDR band scanner for RTL-SDR, HackRF, AirSpy, and SoapySDR devices"
authors = [
    { name = "Simon Holliday" }
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0",
    # pyrtlsdr 0.4.0+ requires the rtlsdr_set_dithering symbol from the
    # rtl-sdr-blog fork.  Pinning below 0.4.0 keeps the package working
    # against distro-packaged librtlsdr too — see installation.txt for
    # the fork build instructions.
    "pyrtlsdr>=0.3.0,<0.4.0",
    "python_hackrf",
    "noisereduce>=3.0.3",
    "PyYAML>=6.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.1",
    # SoapySDR (for AirSpy and other devices) is a system package — install
    # via apt (python3-soapysdr) and use --system-site-packages on the venv.
    # See installation.txt section 4.
]

[project.scripts]
substation = "substation.cli:main"

[tool.setuptools.packages.find]
include = ["substation*"]

[tool.setuptools.dynamic]
version = {attr = "substation.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
