[build-system]
# setuptools 81 removed pkg_resources, which several of our runtime
# dependencies still import.  Pin below 81 until they catch up.
requires = ["setuptools>=61.0,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "substation"
dynamic = ["version"]
description = "A versatile SDR band scanner for RTL-SDR, HackRF, AirSpy, and SoapySDR devices"
authors = [
    { name = "Simon Holliday" }
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0",
    # pyrtlsdr 0.4.0+ requires the rtlsdr_set_dithering symbol from the
    # rtl-sdr-blog fork.  Pinning below 0.4.0 keeps the package working
    # against distro-packaged librtlsdr too — see installation.txt for
    # the fork build instructions.
    "pyrtlsdr>=0.3.0,<0.4.0",
    "python_hackrf",
    "noisereduce>=3.0.3",
    "PyYAML>=6.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.1",
    "mutagen>=1.45",
    # SoapySDR (for AirSpy and other devices) is a system package — install
    # via apt (python3-soapysdr) and use --system-site-packages on the venv.
    # See installation.txt section 4.
]

[project.optional-dependencies]
# Development tools — install with `pip install -e ".[dev]"`.
# pytest is used for the test suite; mypy for the type-check pass
# described in AGENT-INSTRUCTIONS.md §4.  Pinned below 1.18 because
# newer releases ship a C-accelerated backend (librt) that segfaults
# on aarch64 (Raspberry Pi) at time of writing.
dev = [
    "pytest>=7.0",
    "mypy>=1.0,<1.18",
]

# OSC event forwarding — install with `pip install -e ".[osc]"`.
# Enables substation.osc_sender.OscEventSender to bridge scanner
# callbacks onto UDP OSC messages (e.g. Subsequence sequencer on
# port 9000, Subsample sampler on port 9002).  See README section
# "OSC event forwarding" for the wire format and address table.
osc = [
    "python-osc>=1.8",
]

[project.scripts]
substation = "substation.cli:main"

[tool.setuptools.packages.find]
include = ["substation*"]

[tool.setuptools.dynamic]
version = {attr = "substation.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
# Keep mypy strict on our own code.  We only add per-module overrides
# below to silence "library stubs not installed" errors for third-party
# packages that don't ship PEP 561 stubs — scipy, SoapySDR, rtlsdr,
# noisereduce, and soundfile.  Using per-module overrides instead of a
# global `ignore_missing_imports = true` keeps accidental typos in local
# imports visible as errors.
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "scipy",
    "scipy.fft",
    "scipy.ndimage",
    "scipy.signal",
    "SoapySDR",
    "rtlsdr",
    "mutagen",
    "noisereduce",
    "soundfile",
]
ignore_missing_imports = true
